--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
 	      <h2>Be the first to try it:</h2>
-<form action="https://formspree.io/signup@tunnll.com"
+<form action="https://formspree.io/hello@tunnll.com"
       method="POST">
       <input type="email" name="_replyto" placeholder="Your email"/>
       <input type="hidden" name="_next" value="//tunnll.com" />
