Changed the 'next' page to http

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
 <form action="https://formspree.io/hello@tunnll.com"
       method="POST">
       <input type="email" name="_replyto" placeholder="Your email"/>
-      <input type="hidden" name="_next" value="//tunnll.com" />
+      <input type="hidden" name="_next" value="http://tunnll.com" />
 <input type="hidden" name="_subject" value="New Tunnll signup" />
     <input type="submit" value="Send">
 </form>
