Changed the label of the submit button

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
       <input type="email" name="_replyto" placeholder="Your email"/>
       <input type="hidden" name="_next" value="http://tunnll.com" />
 <input type="hidden" name="_subject" value="New Tunnll signup" />
-    <input type="submit" value="Send">
+    <input type="submit" value="Notify me">
 </form>
               <br/><br/>
               <br/><br/>
